--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -42,7 +42,7 @@
                             {{if eq true .isAdmin}}
                                 admin
                             {{else}}
-                                user
+                                {{.username}}
                             {{end}}
                             </strong>
                              </span> <span class="text-muted text-xs block">system </span> </span>
