--- a/web/views/index/edit.html
+++ b/web/views/index/edit.html
@@ -120,7 +120,7 @@
     arr["socks5"] = ["type", "port", "compress", "u", "p"]
     arr["httpProxy"] = ["type", "port", "compress", "u", "p"]
     arr["secret"] = ["type", "target", "compress", "u", "p", "password"]
-    arr["p2p"] = ["type", "password"]
+    arr["p2p"] = ["type", "target", "password"]
     arr["file"] = ["type", "port", "local_path", "strip_pre"]
     arrClientHide = ["compress", "u", "p", "crypt", "mux"]
 
