fix udp nil && add version display on web

--- a/web/views/client/list.html
+++ b/web/views/client/list.html
@@ -151,6 +151,11 @@
                 visible: true,//false表示不显示
             },
             {
+                field: 'Version',//域值
+                title: 'version',//标题
+                visible: true,//false表示不显示
+            },
+            {
                 field: 'VerifyKey',//域值
                 title: 'vkey',//标题
                 visible: true,//false表示不显示
