change package path

--- a/web/views/login/index.html
+++ b/web/views/login/index.html
@@ -37,7 +37,7 @@
             </p>
 
             <p>
-                goto <a href="//github.com/cnlh/nps">nps</a>
+                goto <a href="//ehang.io/nps">nps</a>
             </p>
             <div class="ibox-content">
                 <form class="m-t" onsubmit="return false">
