--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -105,7 +105,7 @@
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
                         <span class="m-r-sm text-muted welcome-message">Welcome to use <a
-                                href="https://github.com/cnlh/nps">NPS</a></span>
+                                href="https://ehang.io/nps">NPS</a></span>
                     </li>
                     <li>
                         <a id="lang-en">English</a>
@@ -128,7 +128,7 @@
     {{.LayoutContent}}
         <div class="footer">
             <div class="pull-right">
-                read more <strong><a href="https://github.com/cnlh/nps">go</a></strong>
+                read more <strong><a href="https://ehang.io/nps">go</a></strong>
             </div>
             <div>
                 <strong>Copyright</strong> nps &copy; 2018-2019
