--- a/web/views/index/edit.html
+++ b/web/views/index/edit.html
@@ -1,108 +1,98 @@
 <div class="row tile">
     <div class="col-md-12 col-md-auto">
         <div class="ibox float-e-margins">
-            <h3 class="ibox-title">编辑</h3>
+            <h3 class="ibox-title" langtag="page-edit"></h3>
             <div class="ibox-content">
                 <form class="form-horizontal">
                     <input type="hidden" name="id" value="{{.t.Id}}">
                     <div class="form-group">
-                        <label class="col-sm-2 control-label" langtag="info-mode">类型 </label>
+                        <label class="col-sm-2 control-label" langtag="word-scheme"></label>
                         <div class="col-sm-10">
                             <select class="form-control" name="type" id="type">
-                                <option {{if eq "tcp" .t.Mode}}selected{{end}} value="tcp">tcp</option>
-                                <option {{if eq "udp" .t.Mode}}selected{{end}} value="udp">udp</option>
-                                <option {{if eq "socks5" .t.Mode}}selected{{end}} value="socks5">socks5
-                                </option>
-                                <option {{if eq "httpProxy" .t.Mode}}selected{{end}} value="httpProxy">http</option>
-                                <option {{if eq "secret" .t.Mode}}selected{{end}} value="secret">secret</option>
-                                <option {{if eq "p2p" .t.Mode}}selected{{end}} value="p2p">p2p</option>
-                                <option {{if eq "file" .t.Mode}}selected{{end}} value="file">file</option>
+                                <option {{if eq "tcp" .t.Mode}}selected{{end}} value="tcp" langtag="scheme-tcp"></option>
+                                <option {{if eq "udp" .t.Mode}}selected{{end}} value="udp" langtag="scheme-udp"></option>
+                                <option {{if eq "httpProxy" .t.Mode}}selected{{end}} value="httpProxy" langtag="scheme-httpProxy"></option>
+                                <option {{if eq "socks5" .t.Mode}}selected{{end}} value="socks5" langtag="scheme-socks5"></option>
+                                <option {{if eq "secret" .t.Mode}}selected{{end}} value="secret" langtag="scheme-secret"></option>
+                                <option {{if eq "p2p" .t.Mode}}selected{{end}} value="p2p" langtag="scheme-p2p"></option>
+                                <option {{if eq "file" .t.Mode}}selected{{end}} value="file" langtag="scheme-file"></option>
                             </select>
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label" langtag="info-remark">备注</label>
+                    <div class="form-group" id="client_id">
+                        <label class="col-sm-2 control-label" langtag="word-clientid"></label>
                         <div class="col-sm-10">
-                            <input value="{{.t.Remark}}" class="form-control" type="text" name="remark"
-                                   placeholder="empty means to be unrestricted">
+                            <input value="{{.t.Client.Id}}" value="{{.client_id}}" class="form-control" type="text" name="client_id" placeholder="" langtag="word-clientid">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label" langtag="word-remark"></label>
+                        <div class="col-sm-10">
+                            <input value="{{.t.Remark}}" class="form-control" type="text" name="remark" placeholder="" langtag="info-unrestricted">
                         </div>
                     </div>
                 {{if eq true .allow_multi_ip}}
                     <div class="form-group" id="server_ip">
-                        <label class="col-sm-2 control-label" langtag="info-server-ip">服务端ip</label>
+                        <label class="col-sm-2 control-label" langtag="word-serverip"></label>
                         <div class="col-sm-10">
-                            <input class="form-control" type="text" value="{{.t.ServerIp}}" name="server_ip"
-                                   placeholder="such as 0.0.0.0">
+                            <input class="form-control" type="text" value="{{.t.ServerIp}}" name="server_ip" placeholder="" langtag="info-suchasip">
                         </div>
                     </div>
                 {{end}}
                     <div class="form-group" id="port">
-                        <label class="col-sm-2 control-label" langtag="info-server-port">服务端端口</label>
+                        <label class="col-sm-2 control-label" langtag="word-serverport"></label>
                         <div class="col-sm-10">
-                            <input value="{{.t.Port}}" class="form-control" type="text" name="port"
-                                   placeholder="such as 8024">
+                            <input value="{{.t.Port}}" class="form-control" type="text" name="port" placeholder="" langtag="info-suchasport">
                         </div>
                     </div>
                 {{if eq true .allow_local_proxy}}
                     <div class="form-group" id="local_proxy">
-                        <label class="control-label col-sm-2" langtag="info-local-proxy">是否代理为服务端本地</label>
+                        <label class="control-label col-sm-2" langtag="word-proxytolocal"></label>
                         <div class="col-sm-10">
                             <select class="form-control" name="local_proxy">
-                                <option  {{if eq false .t.Target.LocalProxy}}selected{{end}} value="0">no</option>
-                                <option  {{if eq true .t.Target.LocalProxy}}selected{{end}} value="1">yes</option>
+                                <option  {{if eq false .t.Target.LocalProxy}}selected{{end}} value="0" langtag="word-no"></option>
+                                <option  {{if eq true .t.Target.LocalProxy}}selected{{end}} value="1" langtag="word-yes"></option>
                             </select>
                         </div>
                     </div>
                 {{end}}
                     <div class="form-group" id="target">
-                        <label class="col-sm-2 control-label" langtag="info-target">内网目标(ip:端口)</label>
+                        <label class="col-sm-2 control-label" langtag="word-target"></label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" name="target" rows="4" placeholder="10.1.50.203:22
-10.1.50.202:22">{{.t.Target.TargetStr}}</textarea>
-                            <span class="help-block m-b-none">can only fill in ports if it is local machine proxy, only tcp supports load balancing
-
-</span></div>
-                    </div>
-
-                    <div class="form-group" id="client_id">
-                        <label class="col-sm-2 control-label" langtag="info-client-id">客户端id</label>
-                        <div class="col-sm-10">
-                            <input value="{{.t.Client.Id}}" value="{{.client_id}}" class="form-control" type="text"
-                                   name="client_id"
-                                   placeholder="id of client">
+                            <textarea class="form-control" name="target" rows="4" placeholder="" langtag="info-suchasiplist">{{.t.Target.TargetStr}}</textarea>
+                            <span class="help-block m-b-none" langtag="info-targettunnel"></span>
                         </div>
                     </div>
 
                     <div class="form-group" id="local_path">
-                        <label class="col-sm-2 control-label" langtag="info-local-path">本地路径</label>
+                        <label class="col-sm-2 control-label" langtag="word-localpath"></label>
                         <div class="col-sm-10">
-                            <input value="{{.t.LocalPath}}" class="form-control" type="text" name="local_path"
-                                   placeholder="such as /tmp">
+                            <input value="{{.t.LocalPath}}" class="form-control" type="text" name="local_path" placeholder="" langtag="info-suchaslocalpath">
                         </div>
                     </div>
 
                     <div class="form-group" id="strip_pre">
-                        <label class="col-sm-2 control-label" langtag="info-strip-pre">访问前缀</label>
+                        <label class="col-sm-2 control-label" langtag="word-stripprefix"></label>
                         <div class="col-sm-10">
-                            <input value="{{.t.StripPre}}" class="form-control" type="text" name="strip_pre"
-                                   placeholder="such as static">
+                            <input value="{{.t.StripPre}}" class="form-control" type="text" name="strip_pre" placeholder="" langtag="info-suchasstripprefix">
                         </div>
                     </div>
 
                     <div class="form-group" id="password">
-                        <label class="col-sm-2 control-label" langtag="info-unique-vkey">唯一验证密钥</label>
+                        <label class="col-sm-2 control-label" langtag="word-identificationkey"></label>
                         <div class="col-sm-10">
-                            <input value="{{.t.Password}}" class="form-control" type="text" name="password"
-                                   placeholder="unique identification key">
-                            <span class="help-block m-b-none">when p2p or secret</span>
+                            <input value="{{.t.Password}}" class="form-control" type="text" name="password" placeholder="" langtag="word-identificationkey">
+                            <span class="help-block m-b-none" langtag="info-identificationkey"></span>
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-2">
-                            <button class="btn btn-success" type="button" id="add"><i
-                                    class="fa fa-fw fa-lg fa-eye"></i><span langtag="info-save">保存</span>
+                            <button class="btn btn-success" type="button" onclick="submitform('edit', '{{.web_base_url}}/index/edit', $('form').serializeArray())">
+                                <i class="fa fa-fw fa-lg fa-check-circle"></i> <span langtag="word-save"></span>
+                                
                             </button>
                         </div>
                     </div>
@@ -156,19 +146,6 @@
         $("#use_client").on("change", function () {
             resetForm()
             resetClientCnf()
-        })
-        $("#add").on("click", function () {
-            $.ajax({
-                type: "POST",
-                url: "{{.web_base_url}}/index/edit",
-                data: $("form").serializeArray(),
-                success: function (res) {
-                    alert(res.msg)
-                    if (res.status) {
-                        history.back(-1)
-                    }
-                }
-            })
         })
     })
 </script>
