--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -7,152 +7,147 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>nps admin</title>
+    <title langtag="title-admin"></title>
 
-    <link href="{{.web_base_url}}/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{.web_base_url}}/static/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link href="{{.web_base_url}}/static/css/style.css" rel="stylesheet">
-    <script src="{{.web_base_url}}/static/js/main.js"></script>
     <!-- Mainly scripts -->
-    <script src="{{.web_base_url}}/static/js/jquery-2.1.1.js"></script>
-    <script src="{{.web_base_url}}/static/js/bootstrap.min.js"></script>
-    <script src="{{.web_base_url}}/static/js/echarts.min.js"></script>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="{{.web_base_url}}/static/css/bootstrap-table.min.css">
+    <link href="{{.web_base_url}}/static/css/fontawesome.min.css" rel="stylesheet">
+    <link href="{{.web_base_url}}/static/css/solid.min.css" rel="stylesheet">
+    <link href="{{.web_base_url}}/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{.web_base_url}}/static/css/bootstrap-table.min.css" rel="stylesheet">
+    <link href="{{.web_base_url}}/static/css/style.css" rel="stylesheet">
 
     <!-- Latest compiled and minified JavaScript -->
+    <script src="{{.web_base_url}}/static/js/jquery-3.4.1.min.js"></script>
+    <script src="{{.web_base_url}}/static/js/popper.min.js"></script>
+    <script src="{{.web_base_url}}/static/js/bootstrap.min.js"></script>
     <script src="{{.web_base_url}}/static/js/bootstrap-table.min.js"></script>
+    <script src="{{.web_base_url}}/static/js/bootstrap-table-locale-all.min.js"></script>
+    <script src="{{.web_base_url}}/static/js/echarts.min.js"></script>
     <script src="{{.web_base_url}}/static/js/inspinia.js"></script>
     <!-- Latest compiled and minified Locales -->
-    <script src="{{.web_base_url}}/static/js/langchange.js" type="text/javascript"></script>
+    <script src="{{.web_base_url}}/static/js/language.js" type="text/javascript"></script>
 
 </head>
 
-<body>
+<body class="pace-done fixed-nav fixed-nav-basic">
 <div id="wrapper">
-    <nav class="navbar-default navbar-static-side" style="position: fixed" role="navigation">
+    <nav class="navbar-default navbar-static-side" role="navigation">
         <div class="sidebar-collapse">
             <ul class="nav metismenu" id="side-menu">
                 <li class="nav-header">
-                    <div class="dropdown profile-element"> <span>
-                    {{/*<img alt="image" class="img-circle" src="{{.web_base_url}}/static/img/profile_small.jpg"/>*/}}
-                    </span>
-                        <a href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">
-                            {{if eq true .isAdmin}}
-                                admin
-                            {{else}}
-                                {{.username}}
-                            {{end}}
-                            </strong>
-                             </span> <span class="text-muted text-xs block">system </span> </span>
-                        </a>
+                    <div class="dropdown profile-element">
+                    {{if eq true .isAdmin}}
+                        <span><i class="fa fa-user-cog fa-3x"></i></span>
+                        <span class="clear"> <span class="block m-t-xs"><strong class="font-bold" langtag="word-admin"></strong></span>
+                        <span class="text-muted text-xs block" langtag="word-system">
+                    {{else}}
+                        <span><i class="fa fa-user fa-3x"></i></span>
+                        <span class="clear"> <span class="block m-t-xs"><strong class="font-bold">{{.username}}</strong></span>
+                        <span class="text-muted text-xs block" langtag="word-user">
+                    {{end}}
+                        </span>
                     </div>
-                    <div class="logo-element">
-                        NPS
-                    </div>
+                    <div class="logo-element" langtag="application"></div>
                 </li>
                 <li class="{{if eq "index" .menu}}active{{end}}">
-                    <a href="{{.web_base_url}}/"><i class="fa fa-dashboard"></i> <span langtag="menu-dashboard"
-                                                                      class="nav-label">仪表盘</span></a>
+                    <a href="{{.web_base_url}}/"><i class="fa fa-tachometer-alt fa-lg"></i>
+                    <span class="nav-label" langtag="word-dashboard"></span></a>
                 </li>
                 <li class="{{if eq "client" .menu}}active{{end}}">
-                    <a href="{{.web_base_url}}/client/list"><i class="fa fa-clipboard"></i> <span langtag="menu-client"
-                                                                                 class="nav-label">客户端</span></a>
+                    <a href="{{.web_base_url}}/client/list"><i class="fa fa-desktop fa-lg"></i>
+                    <span class="nav-label" langtag="word-client"></span></a>
                 </li>
                 <li class="{{if eq "host" .menu}}active{{end}}">
-                    <a href="{{.web_base_url}}/index/hostlist"><i class="fa fa-paperclip"></i> <span langtag="menu-host"
-                                                                                    class="nav-label">域名解析</span></a>
+                    <a href="{{.web_base_url}}/index/hostlist"><i class="fa fa-globe fa-lg"></i>
+                    <span class="nav-label" langtag="scheme-host"></span></a>
                 </li>
                 <li class="{{if eq "tcp" .menu}}active{{end}}">
-                    <a href="{{.web_base_url}}/index/tcp"><i class="fa fa-line-chart"></i> <span langtag="menu-tcp"
-                                                                                class="nav-label">tcp隧道</span></a>
+                    <a href="{{.web_base_url}}/index/tcp"><i class="fa fa-retweet fa-lg"></i>
+                    <span class="nav-label" langtag="scheme-tcp"></span></a>
                 </li>
                 <li class="{{if eq "udp" .menu}}active{{end}}">
-                    <a href="{{.web_base_url}}/index/udp"><i class="fa fa-server"></i> <span langtag="menu-udp"
-                                                                            class="nav-label">udp隧道</span></a>
+                    <a href="{{.web_base_url}}/index/udp"><i class="fa fa-random fa-lg"></i>
+                    <span class="nav-label" langtag="scheme-udp"></span></a>
                 </li>
                 <li class="{{if eq "http" .menu}}active{{end}}">
-                    <a href="{{.web_base_url}}/index/http"><i class="fa fa-html5"></i> <span langtag="menu-http"
-                                                                            class="nav-label">http代理</span></a>
+                    <a href="{{.web_base_url}}/index/http"><i class="fa fa-server fa-lg"></i>
+                    <span class="nav-label" langtag="scheme-httpproxy"></span></a>
                 </li>
                 <li class="{{if eq "socks5" .menu}}active{{end}}">
-                    <a href="{{.web_base_url}}/index/socks5"><i class="fa fa-table"></i> <span langtag="menu-socks5" class="nav-label">socks5代理</span></a>
+                    <a href="{{.web_base_url}}/index/socks5"><i class="fa fa-layer-group fa-lg"></i>
+                    <span class="nav-label" langtag="scheme-socks5"></span></a>
                 </li>
                 <li class="{{if eq "secret" .menu}}active{{end}}">
-                    <a href="{{.web_base_url}}/index/secret"><i class="fa fa-backward"></i> <span langtag="menu-secret"
-                                                                                 class="nav-label">私密代理</span></a>
+                    <a href="{{.web_base_url}}/index/secret"><i class="fa fa-low-vision fa-lg"></i>
+                    <span class="nav-label" langtag="scheme-secret"></span></a>
                 </li>
                 <li class="{{if eq "p2p" .menu}}active{{end}}">
-                    <a href="{{.web_base_url}}/index/p2p"><i class="fa fa-dashcube"></i> <span langtag="menu-p2p"
-                                                                              class="nav-label">p2p代理</span></a>
+                    <a href="{{.web_base_url}}/index/p2p"><i class="fa fa-exchange-alt fa-lg"></i>
+                    <span class="nav-label" langtag="scheme-p2p"></span></a>
                 </li>
                 <li class="{{if eq "file" .menu}}active{{end}}">
-                    <a href="{{.web_base_url}}/index/file"><i class="fa fa-laptop"></i> <span langtag="menu-file"
-                                                                             class="nav-label">文件代理</span></a>
+                    <a href="{{.web_base_url}}/index/file"><i class="fa fa-briefcase fa-lg"></i>
+                    <span class="nav-label" langtag="scheme-file"></span></a>
+                </li>
+                <li class="{{if eq "help" .menu}}active{{end}}">
+                    <a href="{{.web_base_url}}/index/help"><i class="fa fa-lightbulb fa-lg"></i>
+                    <span class="nav-label" langtag="word-help"></span></a>
                 </li>
             </ul>
-
         </div>
     </nav>
-    <div id="page-wrapper" class="gray-bg dashbard-1">
+    <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
-            <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
+            <nav class="navbar white-bg navbar-fixed-top" role="navigation" style="margin-bottom: 0">
+
                 <div class="navbar-header">
-                    <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i>
-                    </a>
+                    <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i></a>
                 </div>
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
-                        <span class="m-r-sm text-muted welcome-message">Welcome to use <a
-                                href="https://ehang.io/nps">NPS</a></span>
+                        <span class="m-r-sm text-muted welcome-message"><span langtag="word-welcome"></span>
+                        <a href="https://ehang.io/nps" langtag="application"></a></span>
                     </li>
                     <li>
-                        <a id="lang-en">English</a>
+                        <span class="btn-group dropdown">
+                            <button id="languagemenu" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-globe-asia fa-lg"></i><span></span></button>
+                            <ul class="dropdown-menu"></ul>
+                        </span>
                     </li>
-                    <li>
-                        <a id="langzh">简体中文</a>
-                    </li>
-
                     <li>
                         <a href="{{.web_base_url}}/login/out">
-                            <i class="fa fa-sign-out"></i> logout
+                            <i class="fa fa-sign-in-alt"></i><span langtag="word-logout"></span>
                         </a>
                     </li>
                 </ul>
-
             </nav>
         </div>
 
-
     {{.LayoutContent}}
-        <div class="footer">
-            <div class="pull-right">
-                read more <strong><a href="https://ehang.io/nps">go</a></strong>
+
+        <div class="footer fixed">
+            <div class="float-right">
+                <span langtag="word-readmore"></span> <strong><a href="https://ehang.io/nps" langtag="word-go"></a></strong>
             </div>
-            <div>
-                <strong>Copyright</strong> nps &copy; 2018-2019
-            </div>
+            <div><strong langtag="word-copyright"></strong> <span langtag="application"></span> &copy; 2018-2019</div>
         </div>
     </div>
-
 </div>
 
 </body>
 </html>
 
 <script>
-   window.nps = {
-       "web_base_url": {{.web_base_url}},
-   }
-    // googleTranslateElementInit()
-    //
-    // function googleTranslateElementInit() {
-    //     new google.translate.TranslateElement({
-    //         layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
-    //     }, 'wrapper');
-    // }
+    window.nps = { "web_base_url": {{.web_base_url}} }
+/*     googleTranslateElementInit()
+    
+     function googleTranslateElementInit() {
+         new google.translate.TranslateElement({
+             layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
+         }, 'wrapper');
+     }
+*/
 </script>
 {{/*<script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>*/}}
-
 
